k8s/base/parking/service.yml
apiVersion: v1
kind: Service
metadata:
  name: parking
  namespace: parking-system
spec:
  selector:
    app: parking
  ports:
    - port: 80
      targetPort: 8080
